Chess Engine v.1 with .jar creator